# eConsultation-AI

./: .gitattributes  .gitignore  README.md  Tech.md  backend_status.py  check_ports.py  docker-compose.yml  render.yaml  run_system.bat  run_system.py  setup.bat  setup.py  start_backend.bat  start_backend.py  start_backend_background.py  start_backend_optimized.bat  start_backend_optimized.py  start_backend_simple.bat  start_frontend.bat  start_frontend.py  start_frontend_simple.bat  start_frontend_simple.py
backend/: DockerFile  app.py  app_fast.py  app_optimized.py  app_simple_fast.py  instant_train.py  monitoring.py  pyproject.toml  requirements.txt  start_simple.py  summarize.py  train_sentiment.py  train_sentiment_simple.py  wordcloud_generator.py
backend/app/: init.py  main.py
deployment/: deploy.bat  deploy.sh  init.sql  nginx.conf
frontend/: .eslintrc.js  DockerFile  nginx.conf  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  App_emergency.jsx  App_simple_test.jsx  DebugApp.js  SimpleApp.js  index.css  index.js
frontend/src/components/: CommentCard.jsx  Dashboard.jsx  ErrorBoundary.jsx  ErrorRecovery.jsx  LoadingErrorBoundary.jsx  LoadingIndicator.jsx  LoadingStateExample.jsx  MonitoringDashboard.jsx  UploadForm.jsx  WordCloud.jsx
frontend/src/demo/: ErrorHandlingDemo.jsx
frontend/src/hooks/: useApiService.js  useSimpleLoading.js
frontend/src/services/: apiService.js  errorHandlingService.js  monitoringService.js
frontend/src/utils/: patternMonitor.js  productionConfig.js  (+3 more)
scripts/: wordcloud.py
