[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "econsultation-ai"
version = "0.1.0"
description = "AI-powered system for analyzing government consultation comments"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "transformers",
    "torch",
    "pandas",
    "matplotlib",
    "wordcloud",
    "httpx",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "httpx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app"]
